--- a/matching-game-frontend/styles.css
+++ b/matching-game-frontend/styles.css
@@ -20,18 +20,18 @@ div.game {
   height: 550px;
   background-color: powderblue;
   padding: 10px;
-  display: flex;
-  flex-wrap: wrap;
 }
 
 div.card {
   background-color: white;
   border: 1px solid black;
-  min-width: 49%;
-  flex: 1 1 auto;
+  float: left;
+  height: 115px;
+  margin: 1%;
+  width: 22.5%;
   display: flex;
-  align-items:center;
-  justify-content:center;
+  align-items: center;
+  justify-content: center
 }
 
 #timer {
