--- a/matching-game-frontend/styles.css
+++ b/matching-game-frontend/styles.css
@@ -1,9 +1,11 @@
 body {
-  font-family: 'Raleway', sans-serif;
-  font-style: normal;
+  font-family: 'Open Sans', sans-serif;
+  color: #1D1A05;
+  background-color: #D0BC71
 }
 
 header {
+  font-family: 'Vollkorn', serif;
   margin: auto;
   text-align: center;
 }
@@ -16,20 +18,21 @@ div.sign-in {
 
 div.game {
   margin: auto;
-  width: 70%;
-  height: 550px;
-  background-color: powderblue;
+  width: 65%;
+  height: 530px;
+  background-color: #50532B;
+  border-radius: 25px;
   padding: 10px;
   position: relative;
 }
 
 div.card {
-  background-color: white;
-  border: 1px solid black;
+  background-color: #A69D5B;
+  border-radius: 25px;
   float: left;
   height: 115px;
   margin: 1%;
-  width: 22.5%;
+  width: 23%;
   display: flex;
   align-items: center;
   justify-content: center
@@ -38,12 +41,14 @@ div.card {
 div.congrats {
   position: absolute;
   text-align: center;
-  line-height: 100px;
-  background-color: white;
-  height: 250px;
-  width: 250px;
-  border: 1px solid black;
-  top: 157px;
+  line-height: 30px;
+  padding: 30px;
+  background-color: #FBE68B;
+  border-radius: 25px;
+  height: 120px;
+  width: 175px;
+  border: 1px solid #1D1A05;
+  top: 190px;
   left: 360px;
 }
 
@@ -56,15 +61,13 @@ h1 {
 }
 
 button {
-  border: #fff;
-  font-family: 'Raleway', sans-serif;
-  color: #000;
+  border: 2px solid #1D1A05;
   text-transform: uppercase;
-  font-weight: bold;
-  background: #fff;
+  background: #E6D17E;
   padding: 10px;
   border-radius: 30px;
-  display: inline-block;
+  display: block;
+  margin: auto;
   transition: all 0.4s ease 0s;
 }
 
@@ -75,10 +78,24 @@ br.br-big {
   content: " ";
 }
 
+
+br.br-med {
+  display: block;
+  margin: 20px 0;
+  content: " ";
+}
+
 input {
-  border: 2px solid red;
-  font-family: 'Raleway', sans-serif;
+  border: 2px solid #1D1A05;
+  background: #E6D17E;
   text-align: center;
   padding: 10px;
   border-radius: 30px;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  font-size: 10px;
 }
